--- a/dal-chess-club-x691/src/styles/navbar.css
+++ b/dal-chess-club-x691/src/styles/navbar.css
@@ -7,6 +7,7 @@ body {
     font-weight: bold;
     background-color: #FFD400;
     overflow: hidden;
+    width: 100%;
   }
   
   .navbar .links {
